feat: add GET endpoint for clients
